# servant-mongodb

./: .gitignore  README.md  config.js  servant-mongodb.cabal  stack.yaml
app/: Main.hs
migrations/: 1-create_environmets.js  2-create_identification_types.js  3-create_taxes.js  4-create_retention_tax.js  5-create_tax_rates.js  6-create_emission_types.js
src/: Lib.hs
src/Bill/: API.hs  Persistence.hs  Types.hs
src/Common/: Persistence.hs  Types.hs
src/Enterprise/: API.hs  Persistence.hs  Types.hs
src/Item/: API.hs  Persistence.hs  Types.hs
test/: BillDetailSpec.hs  BillSpec.hs  ClientSpec.hs  EmissionTypeSpec.hs  EnterpriseSpec.hs  EnvironmentSpec.hs  IdentificationTypeSpec.hs  ItemSpec.hs  MatrixSpec.hs  TaxRateSpec.hs  TaxSpec.hs  Test.hs
